; ModuleID = '/home/carl/AnghaBench/linux/net/strparser/extr_strparser.c_strp_start_timer.c'
source_filename = "/home/carl/AnghaBench/linux/net/strparser/extr_strparser.c_strp_start_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strparser = type { i32 }

@LONG_MAX = common dso_local global i64 0, align 8
@strp_wq = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.strparser*, i64)* @strp_start_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @strp_start_timer(%struct.strparser* %0, i64 %1) #0 {
  %3 = alloca %struct.strparser*, align 8
  %4 = alloca i64, align 8
  store %struct.strparser* %0, %struct.strparser** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %17

7:                                                ; preds = %2
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* @LONG_MAX, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %17

11:                                               ; preds = %7
  %12 = load i32, i32* @strp_wq, align 4
  %13 = load %struct.strparser*, %struct.strparser** %3, align 8
  %14 = getelementptr inbounds %struct.strparser, %struct.strparser* %13, i32 0, i32 0
  %15 = load i64, i64* %4, align 8
  %16 = call i32 @mod_delayed_work(i32 %12, i32* %14, i64 %15)
  br label %17

17:                                               ; preds = %11, %7, %2
  ret void
}

declare dso_local i32 @mod_delayed_work(i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
